deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoproj # Name of the deployment
  namespace: demo-app # Name of the namespace
  labels:
    app: demoproj # Name of your application
spec:
  selector:
    matchLabels:
      app: demoproj # Name of your application
  replicas: 1 # Number of replicas
  template:
    metadata:
      labels:
        app: demo-app # Name of your application
    spec:
      containers:
      - name: demoproj 
        image: wanglvhang/demoproj:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 128Mi
            cpu: "0.2"
        ports:
        # Ports are the ports that your application uses.
        - containerPort: 5000 # The port that your application uses
        volumeMounts:
        # VolumeMounts are the volumes that your application uses.
        - name: datafiles # Name of the volume
          mountPath: /app/datafiles # The path that your application uses
        - name: prod-config
          mountPath: /app/appsettings.Production.json
          subPath: appsettings.Production.json
      volumes:
      # Volumes are the persistent storage that your application uses.
      - name: data # Name of the volume
        persistentVolumeClaim:
          claimName: data-pvc # Name of the persistent volume claim
      - name: config
        configMap:
          name: app-conf
          items:
          - key: appsettings.Production.json 
            path: appsettings.Production.json
---
apiVersion: v1
kind: Service
metadata:
  name: demoproj-svc
  namespace: demo-app
spec:
  type: ClusterIP
  selector:
    app: demoproj
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
